--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/leaflet": "^1.9.6",
+    "fast-xml-parser": "^4.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.3",
+    "prettier": "^3.0.3",
+    "svelte-types": "^0.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  }
 }
