--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,10 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"dependencies": {
+		"@elastic/elasticsearch": "8.10.0",
+		"@types/elasticsearch": "^5.0.41"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
