--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@elastic/elasticsearch": "^8.10.0",
     "@types/node": "^20.8.3",
+    "eslint": "^8.51.0",
     "prettier": "^3.0.3",
     "svelte-types": "^0.0.7",
     "ts-node": "^10.9.1",
