--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"fast-xml-parser": "^4.3.2",
+		"fs": "^0.0.1-security",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
