--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@skeletonlabs/tw-plugin": "^0.2.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/forms": "^0.5.6",
 		"@types/leaflet": "^1.9.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
