--- a/website/package.json
+++ b/website/package.json
@@ -27,5 +27,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/leaflet": "^1.9.6",
+		"leaflet": "^1.9.4"
+	}
 }
