make suitable for fly deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "barrett-baddies---990datafinder-atooltoanalyzenonprofitsandfoundations-taxreturns",
 	"version": "0.0.1",
 	"private": true,
+	"engines": {
+		"node": "16.x",
+		"npm": "8.x"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -9,10 +13,12 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"start": "node build"
 	},
 	"dependencies": {
 		"@elastic/elasticsearch": "8.10.0",
+		"@sveltejs/adapter-node": "^1.0.0-next.106",
 		"@types/elasticsearch": "^5.0.41"
 	},
 	"devDependencies": {
